--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,10 +6,13 @@
   <meta charset="UTF-8">
   <meta name="description" content="A very simple chat">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 </head>
 
 <body>
+  <div id="toasts"></div>
   <div id="root"></div>
+  <div id="redirect"></div>
 </body>
 
 </html>
